WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302525
[blocks-in-inline] Multicolumn does not work
https://bugs.webkit.org/show_bug.cgi?id=302525
Summary
[blocks-in-inline] Multicolumn does not work
Antti Koivisto
Reported
2025-11-14 03:54:10 PST
because missing overflow
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-14 03:54:23 PST
<
rdar://problem/164712340
>
Antti Koivisto
Comment 2
2025-11-14 03:59:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53930
EWS
Comment 3
2025-11-14 05:29:01 PST
Committed
303036@main
(623e769def50): <
https://commits.webkit.org/303036@main
> Reviewed commits have been landed. Closing PR #53930 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug