[blocks-in-inline] Multicolumn does not work https://bugs.webkit.org/show_bug.cgi?id=302525 rdar://164712340

Reviewed by Alan Baradlay.

Test: fast/inline/blocks-in-inline-multicol.html
* LayoutTests/fast/inline/blocks-in-inline-multicol-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-multicol.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentBuilder.cpp:
(WebCore::LayoutIntegration::InlineContentBuilder::adjustDisplayLines const):

We failed to collect overflow from blocks-in-inline.
Turns out this broke multicol.

Canonical link: https://commits.webkit.org/303036@main